Fixes system light/dark mode to prevent FOUC
This commit addresses the FUOC issue associated with the system light/dark mode, and applies the necessary migrations.

--- a/pontoon/base/static/css/dark-theme.css
+++ b/pontoon/base/static/css/dark-theme.css
@@ -1,6 +1,5 @@
 /* Dark Theme Variables */
-.dark-theme,
-.system-theme {
+.dark-theme {
   /* Main */
   --main-border-1: #4d5967;
   --moz-logo: url(../img/moz-logo-light.svg);
